<resources>
    <string name="app_name">TestKnowledge</string>
    <string name="title">Test Knowledge</string>

    <string name="change_language_title">Thay Đổi Ngôn Ngữ</string>
    <string name="language_english">Tiếng Anh</string>
    <string name="language_vietnamese">Việt Nam</string>
    <string name="save">Thiết lập</string>
    <string name="font">Font Chữ</string>
    <string name="default_font">Font mặc định</string>
    <string name="Amatic_SC">Amatic_SC</string>

    //MAIN--ACTIVITY====
    <string name="txtPlay">Chơi</string>
    <string name="txtLaderboard">Bảng Xếp Hạng</string>
    <string name="txtmanager">Quản Lý</string>
    <string name="txtCovid19">Dịch Bệnh Covid-19</string>
    <string name="txtMusic">Âm Thanh</string>
    <string name="txtSetting">Cài Đặt</string>
    <string name="txtHighScore">"Điểm Cao Nhất: "</string>
    <string name="name_dialog">Tên</string>

    //Quiz--Activity======
    <string name="txtScore">Điểm: </string>
    <string name="txtQuestionCount">Câu hỏi thứ: </string>
    <string name="txtCategory">Lĩnh Vực: </string>
    <string name="txtDifficulty">Độ Khó: </string>
    <string name="btnConfirm">Kiểm Tra</string>
    //LOGIN_FORM
    <string name="username">Tên Đăng nhập</string>
    <string name="password">Mật Khẩu</string>
    <string name="btnlogin">Xác Nhận</string>
    <string name="laderboard">Bảng Xếp Hạng</string>
    //MANAGER_FORM
    <string name="questionlist">Danh sách câu hỏi</string>
    <string name="categorylist">Danh sách lĩnh vực</string>
    <string name="add">Thêm Mới</string>
    <string name="clock">Hẹn giờ thi</string>
    //ADD_FRAGMENT
    <string name="addcontent">Thêm</string>
    <string name="questioncontent">Câu Hỏi</string>
    <string name="optition1content">Câu Trả Lời 1</string>
    <string name="optition2content">Câu Trả Lời 2</string>
    <string name="optition3content">Câu Trả Lời 3</string>
    <string name="btnaddquestion">Thêm Câu Hỏi</string>
    <string name="categorycontent">Lĩnh Vực</string>
    <string name="btnaddcategory">Thêm Lĩnh Vực</string>
    //COVID-19
    <string name="strbinhiem">Bị Nhiễm</string>
    <string name="strtuvong">Tử Vong</string>
    <string name="strbinhphuc">Bình Phục</string>
    //FARGMENT_CLOCK
    <string name="txtname_clock">Tên</string>
    <string name="btnhengio_clock">Hẹn Giờ</string>
    <string name="btndunglai_clock">Đặt Lại</string>
    <string name="txtthongtin_clock">Thông Tin Thí Sinh</string>
    <string name="ten_clock">Tên:</string>
    <string name="ngaythi_clock">Ngày Thi: </string>
</resources>
